--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,13 @@
 page-home {
-
+.image {
+     height: 15vw; 
+     width: 15vw; 
+    border: 2px solid #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 5px gray;
+    display: inline-block;
+    margin-left: 6%;
+    margin-top: 6%;
+    margin-right: auto;
+} 
 }
